--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,9 @@
 @import "variables";
-@import "vendors/bourbon";
-@import "vendors/bootstrap-flex";
 
-@import "typography";
-@import "layout";
+@import "modules/bourbon";
+@import "modules/bootstrap-flex";
+@import "modules/offcanvas-menu";
 
-@import "_base.scss";
+@import "pages/common";
+@import "pages/home";
+@import "pages/portfolio";
