--- a/src/scss/pages/_common.scss
+++ b/src/scss/pages/_common.scss
@@ -16,11 +16,30 @@
   color: $brand-primary;
   font-size: 2.4rem;
   font-family: $font-family-amatic;
+  &:before {
+    content: '*';
+    position: relative;
+    top: 0.3rem;
+    font-size: 2rem;
+    height:  2rem;
+    display: inline-block;
+    width: 1.5rem;
+  }
   &:hover,
+  &.hover,
   &:focus,
+  &.focus,
+  &:active,
+  &.active,
   &:active {
-    color: $gray;
+    color: $brand-secondary;
     outline: none;
+    &:before {
+      top: -0.2rem;
+      content: '>>';
+      font-size: 1.6rem;
+      height:  1.8rem;
+    }
   }
 }
 
@@ -127,6 +146,9 @@ body  {
 
 .nav-top__menu-button {
   @include make-button();
+  &:before {
+    display: none;
+  }
   padding: 0;
   position: absolute;
   right: 0;
@@ -265,6 +287,7 @@ body  {
 
 .side-bar__nav {
   position: relative;
+  height: 100%;
   @include media-breakpoint-down(sm) {
     background-repeat: no-repeat;
     background-image: url('/img/main-background-mobile.jpg');
@@ -284,7 +307,7 @@ body  {
   @extend %side-bar__nav-button;
   @include media-breakpoint-up(md) {
     top: 2.2rem;
-    left: 1.6rem;
+    left: 1.2rem;
   }
   @include media-breakpoint-down(sm) {
     top: 60px;
@@ -296,7 +319,7 @@ body  {
   @extend %side-bar__nav-button;
   @include media-breakpoint-up(md) {
     top: 7.6rem;
-    left: 1.8rem;
+    left: 1.4rem;
   }
   @include media-breakpoint-down(sm) {
     top: 119px;
@@ -308,7 +331,7 @@ body  {
   @extend %side-bar__nav-button;
   @include media-breakpoint-up(md) {
     top: 12.6rem;
-    left: 1.9rem;
+    left: 1.5rem;
   }
   @include media-breakpoint-down(sm) {
     top: 173px;
@@ -320,7 +343,7 @@ body  {
   @extend %side-bar__nav-button;
   @include media-breakpoint-up(md) {
     top: 17.7rem;
-    left: 2rem;
+    left: 1.6rem;
   }
   @include media-breakpoint-down(sm) {
     top: 228px;
@@ -332,7 +355,7 @@ body  {
   @extend %side-bar__nav-button;
   @include media-breakpoint-up(md) {
     top: 26.3rem;
-    left: 2.2rem;
+    left: 1.8rem;
   }
   @include media-breakpoint-down(sm) {
     top: 312px;
@@ -344,7 +367,7 @@ body  {
   @extend %side-bar__nav-button;
   @include media-breakpoint-up(md) {
     top: 31.5rem;
-    left: 2.3rem;
+    left: 1.9rem;
   }
   @include media-breakpoint-down(sm) {
     top: 367px;
