--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -46,6 +46,7 @@ $nav-top-height: 50px;
 
 $gray-dark:                   #100403;
 $gray:                        #8b9090;
+$gray-opacity5:               rgba(139, 144, 144, 0.5);
 //$gray-light:                #818a91 !default;
 //$gray-lighter:              #eceeef !default;
 $gray-lightest:               #F4F3F1;
