--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -12,7 +12,7 @@
   display: flex;
   height: 100%;
   justify-content: space-between;
-  padding-top: 2rem;
+  padding-top: 1rem;
 }
 
 .portfolio__content--frontend {
@@ -25,7 +25,8 @@
 
 
 .portfolio__list {
-  width: 67%;
+  width: 66%;
+  padding-left: 1%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -34,53 +35,53 @@
 
 .portfolio__content__title {
   width: 100%;
-  padding-bottom: 1rem;
+  padding-bottom: 1.2rem;
+  padding-top: 1.2rem;
 }
 
 .portfolio__list__project {
   border: none;
   box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.10);
-  width: 49%;
-  padding: 14% 0 0 0;
+  width: 32.3%;
+  padding: 18.5% 0 0 0;
   background: white;
-  margin-bottom: 2%;
+  margin-bottom: 1.6%;
   position: relative;
+  font-size: 1.2rem;
   &:hover {
-    border: 1px solid $brand-secondary;
-  }
-}
-
-.portfolio__list__project--small {
-  border: none;
-  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.10);
-  width: 32%;
-  padding: 8% 0 0 0;
-  background: white;
-  margin-bottom: 2%;
-  position: relative;
-  &:hover {
-    border: 1px solid $brand-secondary;
   }
 }
 
 .portfolio__list__project-name {
   position: absolute;
-  bottom: 2.1rem;
-  left: 4%;
+  left: 50%;
+  top: 66%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  font-family: Arial;
+  font-size: 1.1rem;
+  color: $gray;
 }
 
 .portfolio__list__project-type {
   position: absolute;
-  bottom: 0.4rem;
-  left: 4%;
-  color: $gray;
+  bottom: 0.3rem;
+  right: 4%;
+  color: $gray-opacity5;
+  text-align: center;
+  font-size: 1.1rem;
 }
 
 .portfolio__list__project-img {
   position: absolute;
-  left: 4%;
-  right: 4%;
-  top: 4%;
+  left: 50%;
+  top: 48%;
+  transform: translate(-50%, -50%);
+}
+
+.portfolio__list__project-img--with-name {
+  @extend .portfolio__list__project-img;
+  top: 41%;
 }
 
 .portfolio__header__img-wrapper {
